--- a/config_settings.json
+++ b/config_settings.json
@@ -95,7 +95,7 @@
     ],
     "get_coord_btn_label": [
         "Dohvati koordinate",
-        "Fetch coordinates"
+        "Lookup coordinates"
     ],
     "hovertip": [
         "Mo\u017ee\u0161 upisati i adresu (npr. ulica i mjesto odvojeni zarezom)",
