--- a/config_settings.json
+++ b/config_settings.json
@@ -1,6 +1,6 @@
 {
     "language_setting": "HR",
-    "last_used_software": "None",
+    "last_used_software": "TopoDroid",
     "software_lbl": [
         "Odaberi program: ",
         "Choose software: "
