update english lang settings

--- a/config_settings.json
+++ b/config_settings.json
@@ -23,7 +23,7 @@
     ],
     "readme_file_path": [
         "surveyscraper_README.txt",
-        "surveyscraper_README_en.txt"
+        "surveyscraper_README_EN.txt"
     ],
     "readme_text": [
         "Pogre\u0161ka prilikom u\u010ditanja readme datoteke!",
